# g2n

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
config/collibra/: field_mappings.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
config/great_expectations/: great_expectations.yml
config/great_expectations/expectations/: g2n_features_suite.json  g2n_silver_suite.json
infrastructure/ci/: bitbucket-pipelines.yml
infrastructure/docker/: Dockerfile.dashboard  Dockerfile.serving
infrastructure/openshift/base/: deployment-dashboard.yaml  deployment-serving.yaml  kustomization.yaml  service.yaml
notebooks/: README.md
notebooks/exploration/: eda_g2n_data.py
notebooks/models/: train_accrual_forecast.py  train_leakage_detection.py
notebooks/pipelines/: run_feature_compute.py  run_silver_etl.py
src/g2n/: __init__.py
src/g2n/common/: audit.py  config.py  logging.py
src/g2n/dashboards/: accrual_health.py  feature_quality.py  leakage_console.py  model_governance.py
src/g2n/features/: monitoring.py  registry.py  sdk.py  store.py
src/g2n/models/: base.py
src/g2n/quality/: collibra_sync.py  scoring.py
src/g2n/serving/: app.py
tests/: conftest.py
tests/fixtures/: sample_claims.csv  sample_contracts.json  sample_edi_867.csv
tests/integration/: test_feature_pipeline.py  test_silver_pipeline.py
tests/unit/test_common/: test_audit.py  test_config.py
tests/unit/test_features/: test_registry.py
tests/unit/test_models/: test_base.py
tests/unit/test_pipelines/: test_quality_gate.py
(+53 files in other folders)
