[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g2n"
version = "0.1.0"
description = "Gross-to-Net Revenue Optimization Platform — AI Center of Excellence"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.4",
    "delta-spark>=2.4",
]
quality = [
    "great-expectations>=0.18",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "mlflow>=2.8",
    "pandas>=2.0",
    "numpy>=1.24",
]
serving = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]
dashboards = [
    "streamlit>=1.28",
    "plotly>=5.18",
    "snowflake-connector-python>=3.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
all = ["g2n[spark,quality,ml,serving,dashboards,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/g2n"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "integration: marks tests requiring external services",
    "slow: marks tests that are slow to run",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["g2n"]
